temp/objects/Pokemon_Data__c.object
<CustomObject>
    <fields>
        <fullName>Evolves_from_Variant__c</fullName>
        <description>Locks evolving into the form for region specific variants - pokemon region specific variant must correspond with provided value.</description>
        <label>Evolves from Variant</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_Specific_Pokemon_Variants</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Stage__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Family Stage</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abra</fullName>
                </value>
                <value>
                    <fullName>Absol</fullName>
                </value>
                <value>
                    <fullName>Aerodactyl</fullName>
                </value>
                <value>
                    <fullName>Aipom</fullName>
                </value>
                <value>
                    <fullName>Alomomola</fullName>
                </value>
                <value>
                    <fullName>Amaura</fullName>
                </value>
                <value>
                    <fullName>Anorith</fullName>
                </value>
                <value>
                    <fullName>Applin</fullName>
                </value>
                <value>
                    <fullName>Arceus</fullName>
                </value>
                <value>
                    <fullName>Archen</fullName>
                </value>
                <value>
                    <fullName>Arctovish</fullName>
                </value>
                <value>
                    <fullName>Arctozolt</fullName>
                </value>
                <value>
                    <fullName>Aron</fullName>
                </value>
                <value>
                    <fullName>Arrokuda</fullName>
                </value>
                <value>
                    <fullName>Articuno</fullName>
                </value>
                <value>
                    <fullName>Audino</fullName>
                </value>
                <value>
                    <fullName>Axew</fullName>
                </value>
                <value>
                    <fullName>Azelf</fullName>
                </value>
                <value>
                    <fullName>Azurill</fullName>
                </value>
                <value>
                    <fullName>Bagon</fullName>
                </value>
                <value>
                    <fullName>Baltoy</fullName>
                </value>
                <value>
                    <fullName>Barboach</fullName>
                </value>
                <value>
                    <fullName>Basculin</fullName>
                </value>
                <value>
                    <fullName>Beldum</fullName>
                </value>
                <value>
                    <fullName>Bellsprout</fullName>
                </value>
                <value>
                    <fullName>Bergmite</fullName>
                </value>
                <value>
                    <fullName>Bidoof</fullName>
                </value>
                <value>
                    <fullName>Binacle</fullName>
                </value>
                <value>
                    <fullName>Blacephalon</fullName>
                </value>
                <value>
                    <fullName>Blipbug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picture_Url__c</fullName>
        <label>Picture Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pokedex_Number__c</fullName>
        <defaultValue>&apos;000&apos;</defaultValue>
        <externalId>true</externalId>
        <label>Pokedex Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Type__c</fullName>
        <label>Primary Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pokemon_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Specific_Variant__c</fullName>
        <label>Region Specific Variant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_Specific_Pokemon_Variants</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Type__c</fullName>
        <label>Secondary Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pokemon_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Primary_Type__c) &amp; IF(NOT(ISBLANK(TEXT(Secondary_Type__c))), &apos;/&apos; &amp; TEXT(Secondary_Type__c), &apos;&apos;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Name__c</fullName>
        <formula>TEXT(Region_Specific_Variant__c) &amp; &apos; &apos; &amp; Variant_Of__r.Name</formula>
        <label>Variant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variant Of</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pokemon_Data__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pokemon_Data__c</referenceTo>
        <relationshipLabel>Additional Variants</relationshipLabel>
        <relationshipName>Additional_Variants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pokemon Data</label>
    <listViews>
        <fullName>Additional_Variants</fullName>
        <columns>NAME</columns>
        <columns>Variant_Of__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pokemon_Data__c.Additional_Variant</value>
        </filters>
        <label>Additional Variants</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Pokedex_Number__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Family__c</columns>
        <columns>Family_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pokemon_Data__c.Form</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemons Data</pluralLabel>
    <recordTypes>
        <fullName>Additional_Variant</fullName>
        <active>true</active>
        <description>Additional variant of Pokemon form, like Alolan or Galarian</description>
        <label>Additional Variant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Form</fullName>
        <active>true</active>
        <description>Standard form of the Pokemon species</description>
        <label>Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Not_Changable_Pokedex_Number</fullName>
        <active>true</active>
        <description>Pokedex Number cannot be edited</description>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED(Pokedex_Number__c)
)</errorConditionFormula>
        <errorDisplayField>Pokedex_Number__c</errorDisplayField>
        <errorMessage>Pokedex Number cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Standard_no_Allowed_for_Regional_Variant</fullName>
        <active>true</active>
        <description>You cannot choose this value for this record.</description>
        <errorConditionFormula>ISPICKVAL(Region_Specific_Variant__c, &apos;Standard&apos;)</errorConditionFormula>
        <errorDisplayField>Region_Specific_Variant__c</errorDisplayField>
        <errorMessage>You cannot choose this value for this record.</errorMessage>
    </validationRules>
</CustomObject>